--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,11 +12,35 @@
     <p class="text-lg text-white">Welcome to <%= title %></p>
   </body>
   <div id="app">
+    <div class="input">
+      <input class="py-2 px-4 my-2 rounded-md w-1/3" type="text" v-model="title" placeholder="Add new todo">
+      <br>
+      <input class="py-2 px-4 my-2 rounded-md w-1/3" type="text" v-model="description" placeholder="Add a description">
+      <br>
+      <button class="bg-green-500 hover:bg-purple-700 py-2 px-4 text-white font-bold" @click="addTodo">Add</button>
+
+      <!-- <p v-if="errors.length">
+        <b>Please correct the following error(s):</b>
+        <ul>
+          <li v-for="error in errors">{{ error }}</li>
+        </ul>
+      </p> -->
+    </div>
     <div class="my-2 mx-auto">
-      <div class="border-pink-200 border-2 w-32 my-2 p-2" v-for="todo in todos" :key="todo._id">
-        <h3 class="font-sans font-medium text-base text-white">
+      <div class="border-pink-200 border-2 w-64 my-2 p-2 bg-indigo-600 bg-opacity-20" v-for="(todo, i) in todos" :key="todo.id">
+        <h1>
+          <!-- <span class="text-pink-200">{{ todo.id }}</span> -->
+        </h1>
+        <h3 class="font-sans font-medium text-lg text-white">
           {{ todo.title }}
         </h3>
+        <p class="font-sans font-normal text-base text-white">
+          {{ todo.description }}
+        </p>
+        <div class="flex justify-between">
+          <a class="button bg-green-500 p-2" @click="editTodo(todo)">Edit</a>
+          <a class="button bg-red-500 p-2" @click="deleteTodo(todo, todo.id)">Delete</a>
+        </div> 
       </div>
     </div>
   </div>
@@ -39,6 +63,45 @@ var app = new Vue({
     const response = await fetch('/todo');
     const todo = await response.json();
     this.todos = todo;
+  },
+  methods: {
+    async addTodo() {
+      const response = await fetch('/todo', {
+        method: 'POST',
+        body: JSON.stringify({
+          title: this.title,
+          description: this.description
+        }),
+        headers: {
+          'Content-Type': 'application/json'
+        }
+      });
+      const todo = await response.json();
+
+      this.errors = [];
+
+      if (!this.title && !this.description) {
+        alert('Please fill all the fields');
+        // this.errors.push('Please fill all the fields');
+        //return;
+        if (!this.title) {
+          this.errors.push('Name required.');
+        }
+        if (!this.description) {
+          this.errors.push('Age required.');
+        }
+      }
+      else {
+        this.todos.push(todo);
+      }
+    },
+    async deleteTodo(todo, id) {
+      const response = await fetch(`/todo/` + id, {
+        method: 'DELETE'
+      });
+      const index = this.todos.indexOf(todo);
+      this.todos.splice(index, 1);
+    }
   }
 })
   </script>
