--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,12 +6,43 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+      <script type="text/x-template" id="modal-template">
+      <transition name="modal">
+        <div class="modal-mask">
+          <div class="modal-wrapper">
+            <div class="modal-container">
+
+              <div class="modal-header">
+                <slot name="header" class="mx-auto">
+                  default header
+                </slot>
+              </div>
+
+              <div class="modal-body">
+                <slot name="body">
+                  default body
+                </slot>
+              </div>
+
+              <div class="modal-footer">
+                <slot name="footer">
+                  <button class="border-gray-300 border-opacity-50 hover:border-gray-600 py-2 px-4 text-gray-400 font-bold modal-default-button" @click="$emit('close')">Cancel</button>
+                  <button class="bg-blue-500 hover:bg-purple-700 py-2 px-4 text-white font-bold" @click="addTodo">Save</button>
+                </slot>
+              </div>
+            </div>
+          </div>
+        </div>
+      </transition>
+    </script>
+
   </head>
   <body class="bg-gray-800"> 
     <h1 class="text-2xl font-bold text-white"><%= title %></h1>
     <p class="text-lg text-white">Welcome to <%= title %></p>
   </body>
   <div id="app">
+    <!-- Input new todo -->
     <div class="input">
       <input class="py-2 px-4 my-2 rounded-md w-1/3" type="text" v-model="title" placeholder="Add new todo">
       <br>
@@ -26,6 +57,7 @@
         </ul>
       </p> -->
     </div>
+    <!-- todo list -->
     <div class="my-2 mx-auto">
       <div class="border-pink-200 border-2 w-64 my-2 p-2 bg-indigo-600 bg-opacity-20" v-for="(todo, i) in todos" :key="todo.id">
         <h1>
@@ -43,12 +75,27 @@
         </div> 
       </div>
     </div>
+    <button id="show-modal" class="border-dashed border-2 border-blue-500 rounded-md p-2 text-white w-1/3" @click="showModal = true">Add new task</button>
+    <!-- use the modal component, pass in the prop -->
+    <modal v-if="showModal" @close="showModal = false">
+<!-- Input new todo -->
+      <div slot="body" class="input">
+        <input class="py-2 px-4 my-2 rounded-md w-full border-2 border-gray-400" type="text" v-model="title" placeholder="Add new todo">
+        <br>
+        <input class="py-2 px-4 my-2 rounded-md w-full border-2 border-gray-400" type="text" v-model="description" placeholder="Add a description">
+      </div>
+      <h3 slot="header" class="mx-auto">Add new task</h3>
+    </modal>
   </div>
   <script>
     //let axios = require('axios');
 
     //import axios from 'axios';
     //import "tailwindcss/tailwind.css";
+    Vue.component('modal', {
+      template: '#modal-template',
+    });
+
 var app = new Vue({
   el: '#app',
   data: {
@@ -57,7 +104,8 @@ var app = new Vue({
     //   { text: 'Learn Vue' },
     //   { text: 'Build something awesome' }
     // ]
-    todos: []
+    todos: [],
+    showModal: false,
   },
   async mounted() {
     const response = await fetch('/todo');
