--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,8 +26,6 @@
 
               <div class="modal-footer">
                 <slot name="footer">
-                  <button class="border-gray-300 border-opacity-50 hover:border-gray-600 py-2 px-4 text-gray-400 font-bold modal-default-button" @click="$emit('close')">Cancel</button>
-                  <button class="bg-blue-500 hover:bg-purple-700 py-2 px-4 text-white font-bold" @click="addTodo">Save</button>
                 </slot>
               </div>
             </div>
@@ -37,18 +35,18 @@
     </script>
 
   </head>
-  <body class="bg-gray-800"> 
+  <body class="bg-gray-800 text-center"> 
     <h1 class="text-2xl font-bold text-white"><%= title %></h1>
     <p class="text-lg text-white">Welcome to <%= title %></p>
   </body>
-  <div id="app">
+  <div id="app" class="w-11/12 text-center mx-auto">
     <!-- Input new todo -->
-    <div class="input">
+    <!-- <div class="input">
       <input class="py-2 px-4 my-2 rounded-md w-1/3" type="text" v-model="title" placeholder="Add new todo">
       <br>
       <input class="py-2 px-4 my-2 rounded-md w-1/3" type="text" v-model="description" placeholder="Add a description">
       <br>
-      <button class="bg-green-500 hover:bg-purple-700 py-2 px-4 text-white font-bold" @click="addTodo">Add</button>
+      <button class="bg-green-500 hover:bg-purple-700 py-2 px-4 text-white font-bold" @click="addTodo">Add</button> -->
 
       <!-- <p v-if="errors.length">
         <b>Please correct the following error(s):</b>
@@ -56,10 +54,10 @@
           <li v-for="error in errors">{{ error }}</li>
         </ul>
       </p> -->
-    </div>
+    <!-- </div> -->
     <!-- todo list -->
-    <div class="my-2 mx-auto">
-      <div class="border-pink-200 border-2 w-64 my-2 p-2 bg-indigo-600 bg-opacity-20" v-for="(todo, i) in todos" :key="todo.id">
+    <div class="my-2">
+      <div class="border-pink-200 border-2 w-64 my-2 p-2 bg-indigo-600 bg-opacity-10 mx-auto" v-for="(todo, i) in todos" :key="todo.id">
         <h1>
           <!-- <span class="text-pink-200">{{ todo.id }}</span> -->
         </h1>
@@ -78,13 +76,18 @@
     <button id="show-modal" class="border-dashed border-2 border-blue-500 rounded-md p-2 text-white w-1/3" @click="showModal = true">Add new task</button>
     <!-- use the modal component, pass in the prop -->
     <modal v-if="showModal" @close="showModal = false">
-<!-- Input new todo -->
+      <h3 slot="header" class="mx-auto font-bold text-2xl">Add Task</h3>
+      <!-- Input new todo -->
       <div slot="body" class="input">
-        <input class="py-2 px-4 my-2 rounded-md w-full border-2 border-gray-400" type="text" v-model="title" placeholder="Add new todo">
+        <input class="py-2 px-4 my-2 rounded-md w-full border-2 border-gray-400" type="text" v-model="title" placeholder="What are you working on?">
         <br>
-        <input class="py-2 px-4 my-2 rounded-md w-full border-2 border-gray-400" type="text" v-model="description" placeholder="Add a description">
+        <input class="py-2 px-4 my-2 rounded-md w-full border-2 border-gray-400" type="text" v-model="description" placeholder="Add note">
       </div>
-      <h3 slot="header" class="mx-auto">Add new task</h3>
+      <!-- modal footer -->
+      <div slot="footer" class="flex flex-row-reverse gap-2">
+        <button class="bg-blue-500 hover:bg-blue-700 py-2 px-4 text-white font-bold w-20" @click="addTodo">Save</button>
+        <button class="bg-white bg-opacity-20 border-2 hover:border-red-500 border-gray-200 py-2 px-4 text-gray-400 hover:text-red-500 font-bold w-20" @click="showModal = false">Cancel</button>
+      </div>
     </modal>
   </div>
   <script>
@@ -99,11 +102,6 @@
 var app = new Vue({
   el: '#app',
   data: {
-    // todos: [
-    //   { text: 'Learn JavaScript' },
-    //   { text: 'Learn Vue' },
-    //   { text: 'Build something awesome' }
-    // ]
     todos: [],
     showModal: false,
   },
