--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,9 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-      <script type="text/x-template" id="modal-template">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <script type="text/x-template" id="modal-template">
       <transition name="modal">
         <div class="modal-mask">
           <div class="modal-wrapper">
@@ -36,10 +38,9 @@
 
   </head>
   <body class="bg-gray-800 text-center"> 
-    <h1 class="text-2xl font-bold text-white"><%= title %></h1>
-    <p class="text-lg text-white">Welcome to <%= title %></p>
+    <h1 class="text-2xl font-bold text-white my-8 underline"><%= title %></h1>
   </body>
-  <div id="app" class="w-11/12 text-center mx-auto">
+  <div id="app" class="w-full mt-8 mx-auto">
     <!-- Input new todo -->
     <!-- <div class="input">
       <input class="py-2 px-4 my-2 rounded-md w-1/3" type="text" v-model="title" placeholder="Add new todo">
@@ -57,31 +58,42 @@
     <!-- </div> -->
     <!-- todo list -->
     <div class="my-2">
-      <div class="border-pink-200 border-2 w-64 my-2 p-2 bg-indigo-600 bg-opacity-10 mx-auto" v-for="(todo, i) in todos" :key="todo.id">
-        <h1>
-          <!-- <span class="text-pink-200">{{ todo.id }}</span> -->
-        </h1>
-        <h3 class="font-sans font-medium text-lg text-white">
-          {{ todo.title }}
-        </h3>
-        <p class="font-sans font-normal text-base text-white">
-          {{ todo.description }}
-        </p>
-        <div class="flex justify-between">
-          <a class="button bg-green-500 p-2" @click="editTodo(todo)">Edit</a>
-          <a class="button bg-red-500 p-2" @click="deleteTodo(todo, todo.id)">Delete</a>
-        </div> 
+      <div class="group border-gray-300 border-2 w-1/3 my-2 p-2 bg-indigo-600 bg-opacity-10 mx-auto" v-for="todo in todos" :key="todo.id">
+        <div class="group-hover:border-pink-600">
+          <div class="flex">
+            <input type="checkbox" class="" v-model="todo.completed" @click="updateStatusTodo(todo, todo.id)">
+            <span class="material-icons my-auto pl-4 text-2xl text-green-400 cursor-pointer" @click="">
+              check_circle
+            </span>
+            <h3 class="font-sans font-bold text-lg text-white p-4 text-left">
+              {{ todo.title }}
+            </h3>
+          </div>
+          <p class="font-sans font-normal text-base text-white p-4 mx-4 bg-indigo-900 rounded-md shadow-sm text-left">
+            {{ todo.description }}
+          </p>
+          <div class="flex justify-between m-4">
+            <a class="button bg-green-500 p-2" @click="editTodo(todo)">Edit</a>
+            <a class="button bg-red-500 p-2" @click="deleteTodo(todo, todo.id)">Delete</a>
+          </div> 
+        </div>
       </div>
     </div>
-    <button id="show-modal" class="border-dashed border-2 border-blue-500 rounded-md p-2 text-white w-1/3" @click="showModal = true">Add new task</button>
+    <button id="show-modal" class="border-dashed border-2 border-blue-500 hover:bg-blue-800 rounded-md p-2 text-white w-1/3 font-bold text-lg my-4 inline-flex justify-center gap-4" @click="showModal = true">
+      <span class="material-icons my-auto">
+        add_circle_outline
+      </span>
+      <span class="my-auto">
+        Add New Task
+      </span>
+    </button>
     <!-- use the modal component, pass in the prop -->
     <modal v-if="showModal" @close="showModal = false">
       <h3 slot="header" class="mx-auto font-bold text-2xl">Add Task</h3>
       <!-- Input new todo -->
       <div slot="body" class="input">
-        <input class="py-2 px-4 my-2 rounded-md w-full border-2 border-gray-400" type="text" v-model="title" placeholder="What are you working on?">
-        <br>
-        <input class="py-2 px-4 my-2 rounded-md w-full border-2 border-gray-400" type="text" v-model="description" placeholder="Add note">
+        <input class="py-2 px-4 my-2 rounded-md w-full border-2 border-gray-400 shadow-sm" type="text" v-model="title" id="task" placeholder="What are you working on?">
+        <input class="py-2 px-4 my-2 rounded-md w-full border-2 border-gray-400 shadow-sm" type="text" v-model="description" id="note" placeholder="Add note">
       </div>
       <!-- modal footer -->
       <div slot="footer" class="flex flex-row-reverse gap-2">
@@ -141,6 +153,24 @@ var app = new Vue({
         this.todos.push(todo);
       }
     },
+    // update todo method
+
+    // async updateStatusTodo(todo, id) {
+    //   const response = await fetch('/todo/' + id, {
+    //     method: 'PATCH',
+    //     body: JSON.stringify({
+    //       completed: this.completed
+    //     }),
+    //   });
+      
+    //   if (this.completed == 1) {
+    //     this.completed = 0;
+    //   }
+    //   else {
+    //     this.completed = 1;
+    //   }
+    //   const todo = await response.json();
+    // },
     async deleteTodo(todo, id) {
       const response = await fetch(`/todo/` + id, {
         method: 'DELETE'
@@ -152,3 +182,9 @@ var app = new Vue({
 })
   </script>
 </html>
+
+<!-- UPCOMING TASK 
+  1. redesign edit, delete button
+  2. create modal to edit task
+  3. create update status todo button
+-->
