--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,8 +61,13 @@
       <div class="group border-gray-300 border-2 w-1/3 my-2 p-2 bg-indigo-600 bg-opacity-10 mx-auto" v-for="todo in todos" :key="todo.id">
         <div class="group-hover:border-pink-600">
           <div class="flex">
-            <input type="checkbox" class="" v-model="todo.completed" @click="updateStatusTodo(todo, todo.id)">
-            <span class="material-icons my-auto pl-4 text-2xl text-green-400 cursor-pointer" @click="">
+            <!-- <input type="checkbox" class="" v-model="todo.completed" @click="updateStatusTodo(todo, todo.id)"> -->
+
+            
+            <span class="material-icons my-auto pl-4 text-2xl text-green-400 cursor-pointer" @click="updateStatusTodo(todo, todo.id)" v-model="todo.completed" v-if="todo.completed == 1">
+              check_circle
+            </span>
+            <span class="material-icons my-auto pl-4 text-2xl text-yellow-400 cursor-pointer" @click="updateStatusTodo(todo, todo.id)" v-model="todo.completed" v-else>
               check_circle
             </span>
             <h3 class="font-sans font-bold text-lg text-white p-4 text-left">
@@ -72,9 +77,13 @@
           <p class="font-sans font-normal text-base text-white p-4 mx-4 bg-indigo-900 rounded-md shadow-sm text-left">
             {{ todo.description }}
           </p>
-          <div class="flex justify-between m-4">
-            <a class="button bg-green-500 p-2" @click="editTodo(todo)">Edit</a>
-            <a class="button bg-red-500 p-2" @click="deleteTodo(todo, todo.id)">Delete</a>
+          <div class="flex justify-end my-2 gap-2">
+            <button class="bg-green-500 hover:bg-green-700 w-10 h-auto text-white font-bold rounded-md" @click="editTodo(todo, todo.id)">
+              <i class="material-icons py-2">edit</i>
+            </button>            
+            <button class="bg-red-500 hover:bg-red-700 w-10 h-auto text-white font-bold rounded-md" @click="deleteTodo(todo, todo.id)">
+              <i class="material-icons py-2">delete</i>
+            </button>
           </div> 
         </div>
       </div>
@@ -116,6 +125,7 @@ var app = new Vue({
   data: {
     todos: [],
     showModal: false,
+    clicked: false,
   },
   async mounted() {
     const response = await fetch('/todo');
@@ -155,36 +165,54 @@ var app = new Vue({
     },
     // update todo method
 
-    // async updateStatusTodo(todo, id) {
-    //   const response = await fetch('/todo/' + id, {
-    //     method: 'PATCH',
-    //     body: JSON.stringify({
-    //       completed: this.completed
-    //     }),
-    //   });
-      
-    //   if (this.completed == 1) {
-    //     this.completed = 0;
-    //   }
-    //   else {
-    //     this.completed = 1;
-    //   }
-    //   const todo = await response.json();
-    // },
+    async updateStatusTodo(todo, id) {
+      var stats;
+      if (this.completed == 1) {
+        stats = 0;
+      } else {
+        stats = 1;
+      }
+      const response = await fetch('/todo/' + id, {
+        method: 'PATCH',
+        body: JSON.stringify({
+          title: this.title,
+          description: this.description,
+          completed: stats
+        }),
+      });
+      const todo = await response.json();
+    },
     async deleteTodo(todo, id) {
       const response = await fetch(`/todo/` + id, {
         method: 'DELETE'
       });
       const index = this.todos.indexOf(todo);
       this.todos.splice(index, 1);
-    }
+      return response;
+    },
+    async editTodo(todo, id) {
+      showModal = true;
+      const response = await fetch(`/todo/` + id, {
+        method: 'PATCH',
+        body: JSON.stringify({
+          title: this.title,
+          description: this.description
+        }),
+        headers: {
+          'Content-Type': 'application/json'
+        }
+      });
+      const todo = await response.json();
+      this.todos.push(todo);
+    },
+    
   }
 })
   </script>
 </html>
 
 <!-- UPCOMING TASK 
-  1. redesign edit, delete button
+  1. redesign edit, delete button - done
   2. create modal to edit task
   3. create update status todo button
 -->
