--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,15 +61,13 @@
       <div class="group border-gray-300 border-2 w-1/3 my-2 p-2 bg-indigo-600 bg-opacity-10 mx-auto" v-for="todo in todos" :key="todo.id">
         <div class="group-hover:border-pink-600">
           <div class="flex">
-            <!-- <input type="checkbox" class="" v-model="todo.completed" @click="updateStatusTodo(todo, todo.id)"> -->
-
             
-            <span class="material-icons my-auto pl-4 text-2xl text-green-400 cursor-pointer" class="stats" @click="updateStatus(todo, todo.id)" v-model="todo.completed" v-if="todo.completed == 1">
+            <i class="material-icons my-auto pl-4 text-2xl text-green-400 cursor-pointer" class="stats" @click="updateStatus(todo, todo.id)" v-if="todo.completed == 1">
               check_circle
-            </span>
-            <span class="material-icons my-auto pl-4 text-2xl text-yellow-400 cursor-pointer" class="stats" @click="updateStatus(todo, todo.id)" v-model="todo.completed" v-else>
+            </i>
+            <i class="material-icons my-auto pl-4 text-2xl text-yellow-400 cursor-pointer" class="stats" @click="updateStatus(todo, todo.id)" v-else>
               check_circle
-            </span>
+            </i>
             <h3 class="font-sans font-bold text-lg text-white p-4 text-left">
               {{ todo.title }}
             </h3>
@@ -104,15 +102,17 @@
       <h3 slot="header" class="mx-auto font-bold text-2xl" v-else>Edit Task</h3>
       <!-- Input new todo -->
       <div slot="body" class="input">
+        <!-- hidden input -->
+        <input type="hidden" v-model="id">
         <input class="py-2 px-4 my-2 rounded-md w-full border-2 border-gray-400 shadow-sm" type="text" v-model="title" placeholder="What are you working on?">
         <input class="py-2 px-4 my-2 rounded-md w-full border-2 border-gray-400 shadow-sm" type="text" v-model="description" placeholder="Add note">
       </div>
       <!-- modal footer -->
       <div slot="footer" class="flex flex-row-reverse gap-2">
         <!-- Show when in add new task mode -->
-        <button class="bg-blue-500 hover:bg-blue-700 py-2 px-4 text-white font-bold w-20" v-if="!editModal" @click="addTodo">Save</button>
+        <button class="bg-blue-500 hover:bg-blue-700 py-2 px-4 text-white font-bold w-20" v-if="!editModal" @click="addTodo;">Save</button>
         <!-- Show when in edit task mode -->
-        <button class="bg-blue-500 hover:bg-blue-700 py-2 px-4 text-white font-bold w-20" id="update" v-else>Update</button>
+        <button class="bg-blue-500 hover:bg-blue-700 py-2 px-4 text-white font-bold w-20" id="update" v-else @click="updateTodo(id)">Update</button>
         <button class="bg-white bg-opacity-20 border-2 hover:border-red-500 border-gray-200 py-2 px-4 text-gray-400 hover:text-red-500 font-bold w-20" @click="showModal = false">Cancel</button>
       </div>
     </modal>
@@ -127,7 +127,6 @@
       data: {
         todos: [],
         showModal: false,
-        clicked: false,
         editModal: false,
       },
       async mounted() {
@@ -164,10 +163,10 @@
           }
           else {
             this.todos.push(todo);
+            this.showModal = false;
           }
         },
         async updateStatus(todo, id) {
-          //this.clicked = !this.clicked;
           if (todo.completed == 1) {
             todo.completed = 0;
           }
@@ -197,27 +196,7 @@
           this.title = todo.title;
           this.description = todo.description;
           this.completed = todo.completed;
-
           this.id = id;
-          // get document by id of upd
-          
-          //let x = document.getElementsById('update').length;
-          alert(id);
-          this.addClass(id);
-          // update method todo
-          //this.updateTodo(todo.id);
-        //this.updateTodo(todo.id);
-        },
-        addClass(id) {
-          // create new attribute to button element
-          document.getElementById('update').setAttribute('id', 'update' + id);
-          alert(id);
-          // document.getElementById('update').setAttribute('@click','updateTodo(' + id + ')');
-          // var btn = document.getElementById("update");
-          // var att = document.createAttribute("onclick");
-          // // att.value = "updateTodo(id)";
-          // att.value = "updateTodo(" + id + "); showModal = false; editModal = false";
-          // btn.setAttribute(att);
         },
         async updateTodo(id) {
           // alert('update');
@@ -232,8 +211,15 @@
             }
           });
           const todo = await response.json();
-        //this.todos.splice(this.todos.indexOf(todo), 1, todo);
+          this.showModal = false;
+          this.editModal = false;
+          this.updated();          
         },
+        async updated() {
+          const response = await fetch('/todo');
+          const todo = await response.json();
+          this.todos = todo;
+      },
       }
     });
   </script>
