add vue favicon

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,8 +3,8 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="icon" href="/images/favicon.ico">
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -222,10 +222,3 @@
     });
   </script>
 </html>
-
-<!-- UPCOMING TASK 
-  1. redesign edit, delete button - done
-  2. create modal to edit task - done
-  3. create update status todo button - done
-  4. update todo details -> try jquery to pass the id by creating new attrbiute to button
--->
