--- a/views/index.ejs
+++ b/views/index.ejs
@@ -103,7 +103,7 @@
         <button class="bg-blue-500 hover:bg-blue-700 py-2 px-4 text-white font-bold w-20" v-if="!editModal" @click="addTodo">Save</button>
         <!-- Show when in edit task mode -->
         <button class="bg-blue-500 hover:bg-blue-700 py-2 px-4 text-white font-bold w-20" id="update" v-else @click="updateTodo(id)">Update</button>
-        <button class="bg-white bg-opacity-20 border-2 hover:border-red-500 border-gray-200 py-2 px-4 text-gray-400 hover:text-red-500 font-bold w-20" @click="showModal = false; editModal = false">Cancel</button>
+        <button class="bg-white bg-opacity-20 border-2 hover:border-red-500 border-gray-200 py-2 px-4 text-gray-400 hover:text-red-500 font-bold w-20" @click="errors = []; showModal = false; editModal = false;">Cancel</button>
       </div>
     </modal>
   </div>
@@ -182,12 +182,22 @@
           return response;
         },
         editTodo(todo, id) {
+          this.errors = [];
           this.editModal = true;
           this.title = todo.title;
           this.description = todo.description;
           this.id = id;
         },
         async updateTodo(id) {
+          if (this.title == '' || this.description == '') {
+            if (this.title == '') {
+              this.errors.push('Title is required.');
+            }
+            if (this.description == '') {
+              this.errors.push('Note is required.');
+            }
+            return false;
+          }
           const response = await fetch(`/todo/` + id, {
             method: 'PATCH',
             body: JSON.stringify({
@@ -217,6 +227,7 @@
         resetInstances() {
           this.title = '';
           this.description = '';
+          this.errors = [];
         },
       }
     });
